<resources>
    <string name="app_name">idio</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="title_first_fragment">Docházka</string>
    <string name="title_cant_fragment">Stravování</string>
    <string name="date_cant_fragment">Jídelní lístek od </string>
    <string name="title_activity_login">Přihlášení</string>
    <string name="next">Další</string>
    <string name="previous">Předchozí</string>
    <string name="actual">Aktualní</string>
    <string name="food_prompt" />
    <string name="order" />

    <string name="vydejnalbl">Prosím vyberte výdejnu</string>
    <string name="btn_label_cantel">Zrušit objednávku</string>
    <string name="toast_label_order">Objednáno</string>
    <string name="toast_label_order1">Objednávky již byly uzavřeny</string>
    <string name="toast_label_order2">Objednáno</string>
    <string name="btn_order_label">Objednat</string>
    <string name="option_1">Docházka</string>
    <string name="option_2">Stravování</string>
    <string name="option_3">nastavení</string>
    <string name="option_4">O aplikaci</string>

    <string name="name">Přihlašovací jmeno</string>
    <string name="pass">Heslo</string>
    <string name="autoLog">Automaticky se přihlásit</string>


    <string-array name="menu_items">
        <item id="4">Jídelna Řeznictví</item>
        <item id="2">Výdejna Dolní Sloupnice</item>
        <item id="3">Výdejna Mechanizace</item>
        <item id="1">Výdejna Němčice</item>
        <item id="5">Výdejna Řetová</item>
    </string-array>
    <string-array name="days_of_week">
        <item id="0">Pondělí</item>
        <item id="1">Úterý</item>
        <item id="2">Středa</item>
        <item id="3">Čtvrtek</item>
        <item id="4">Pátek</item>
        <item id="5">Sobota</item>
        <item id="6">Neděle</item>
    </string-array>
    <string name="title_setting_fragment">Nastavení</string>
    <string name="vydejnaSetLbl">Nastavení výchozí výdejny: </string>
    <string name="homeSet">výchozí obrazovka: </string>
    <string name="antRadioButton">Docházka</string>
    <string name="cantRadioButton">Stravování</string>
    <string name="savebutton">Uložit všechna nastavení</string>
    <string name="url_adresa_serveru">URL Adresa Serveru:</string>
    <string name="zadejte_url_serveru">Zadejte URL serveru:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="option_0">Uvod</string>
    <string name="title_home_fragment">Souhrn</string>
    <string name="n_hrada_za_sv_tek_0">Náhrada za svátek: 0</string>
    <string name="celkov_po_et_no_n_ch_hodin_0">Celkový počet nočních hodin: 0</string>
    <string name="p_es_as_0">Přesčas: 0</string>
    <string name="celkov_p_ehled_m_s_ce">Celkový přehled měsíce</string>
    <string name="celkov_po_et_odpracovan_ch_hodin_0">Celkový počet odpracovaných hodin: 0</string>
    <string name="celkov_po_et_hodin_odpracovan_ch_o_v_kendu_0">Celkový počet hodin odpracovaných o víkendu: 0</string>
    <string name="dovolen_0">Dovolená: 0</string>
    <string name="menu">menu</string>
</resources>