<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_home"
        android:title="@string/option_0"
        android:icon="@android:drawable/ic_menu_share"/>
    <item
        android:id="@+id/menu_attendance"
        android:title="@string/option_1"
        android:icon="@drawable/baseline_calendar_month_24"/>
    <item
        android:id="@+id/menu_catering"
        android:title="@string/option_2"
        android:icon="@drawable/baseline_food_bank_24"/>
    <item
        android:id="@+id/menu_setting"
        android:title="@string/option_3"
        android:icon="@drawable/baseline_settings_24"/>
    <item
        android:id="@+id/menu_info"
        android:title="@string/option_4"
        android:icon="@drawable/baseline_info_24"/>
</menu>