<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- Nadpis -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="SpeakableTextPresentCheck">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celkov_p_ehled_m_s_ce"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <!-- Výběr měsíce -->
    <Spinner
        android:id="@+id/month_spinner"
        android:layout_width="264dp"
        android:layout_height="36dp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        tools:ignore="TouchTargetSizeCheck" />

    <!-- Celkový souhrn -->
    <LinearLayout
        android:id="@+id/summary_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/month_spinner"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <TextView
            android:id="@+id/total_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celkov_po_et_odpracovan_ch_hodin_0"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/night_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celkov_po_et_no_n_ch_hodin_0"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/weekend_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/celkov_po_et_hodin_odpracovan_ch_o_v_kendu_0"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/overtime_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/p_es_as_0"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/holiday_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dovolen_0"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
        <TextView
            android:id="@+id/holiday_compensation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n_hrada_za_sv_tek_0"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
    </LinearLayout>

    <!-- Sloupcový graf -->
    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_below="@id/summary_layout"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp" />

</RelativeLayout>
