<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="20"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:autofillHints="sem doplňte své příjmení" />

        <EditText
            android:id="@+id/editTextTextPwd"
            style="@style/Widget.AppCompat.EditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/pass"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:textSize="20sp"
           />


        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/zadejte_url_serveru"
            android:textSize="16sp" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />


        <EditText
            android:id="@+id/editTextUrl"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:ems="10"
            android:inputType="text"
            android:text="http://remote.zdsloupnice.cz/"
            android:textSize="16sp"
            tools:ignore="TextFields"
            android:autofillHints="na konci url adresy musi být lomítko /" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/autoLog" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:id="@+id/Login"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_login"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>